<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph">
    <item
        android:id="@+id/login"
        android:title="@string/label_account"
        android:icon="@drawable/account"/>

    <item
        android:id="@+id/library"
        android:title="@string/label_library"
        android:icon="@drawable/logo"/>
    <item
        android:id="@+id/browse_books"
        android:title="@string/label_browse_books"
        android:icon="@drawable/baseline_search_24"/>

    <item
        android:id="@+id/manage_notes"
        android:title="@string/label_manage_notes"
        android:icon="@drawable/note_logo"/>

    <item
        android:id="@+id/submenu_item"
        android:title="@string/label_submenu_title">
        <menu></menu>
    </item>

</menu>